examples/fail/fail_exception_default_fn/project.bri
import * as std from "std";

export const project = {
  dependencies: {
    std: "*",
  },
};

interface TestType {
  foo: string;
  bar: string;
}

export default () => {
  throw new Error("default export exception");
}
